redesign about page

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -6,6 +6,7 @@ $bg-dark: #212922;
 
 $text-bright: $bg-dark;
 $text-dark: $bg-bright;
+$text-alt: #090B09;
 
 $font-header: "moonless_scregular";
 $font-text: "quicksandregular";
