changed dev styles

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,6 +1,6 @@
 
 // dev
-$primary: #B1D2BE;
+$primary: #EBEBEB;
 $secondary: #294936;
 
 $bg-bright: $primary;
@@ -27,7 +27,7 @@ $border-dark: $secondary;
 // artist
 $a-primary: black;
 $a-secondary: rgba(10, 10, 10, 0.55);
-$a-sun: #3D3D3D;
+$a-sun: #7A7A7A;
 
 $a-bg-bright: $primary;
 $a-bg-dark: black;
