overhault of dev layout

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,10 +1,10 @@
 
 // dev
 $primary: #EBEBEB;
-$secondary: #294936;
+$secondary: #6f6866;
 
 $bg-bright: $primary;
-$bg-dark: #212922;
+$bg-dark: black;
 
 $text-bright: $bg-dark;
 $text-dark: $bg-bright;
